# Learn-Kartuli-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  skills  task.md
.github/workflows/: deploy.yml
data/decks/: a1_seed.json
migrations/: 0001_init.sql  0002_reminder_dispatches.sql  0003_srs_strict_and_user_cards.sql  0004_unstick_new_cards.sql  0005_card_difficulty.sql  0006_remove_alphabet_cards.sql
scripts/: validate_deck.py
src/kartuli_bot/: config.py  db.py  deck_quality.py  keyboards.py  leitner.py  main.py  scheduler.py  srs.py
src/kartuli_bot/handlers/: add.py  admin.py  learn.py  settings.py  skill.py  start.py  stats.py
src/kartuli_bot/skills/: registry.py  service.py
tests/: test_answer_eval.py  test_db.py  test_leitner.py  test_srs.py
